--- a/style.css
+++ b/style.css
@@ -26,6 +26,21 @@ body{
 	line-height: 25px;
 
 }
+.home_page .username{
+	width:250px;
+	border: 1px solid grey;
+	height: 30px;
+	border-radius: 5px;
+	box-sizing: border-box;
+	outline: none;
+	transition: .3s;
+	font-size: 16px;
+	font-family: 'Montserrat', sans-serif;
+}
+.home_page .username:focus{
+	border-color: #009688;
+	box-shadow: 0 0 8px 0 #009688;
+}
 .home_page p{
 	font-size: 16px;
 	margin-bottom: 10px;
@@ -55,7 +70,7 @@ body{
 	font-size: 18px;
 	color:#009688;
 	font-weight: 600;
-	border-bottom: 1px solid #cccccc;
+	
 	line-height: 25px;
 
 }
@@ -67,9 +82,12 @@ body{
 	padding: 20px 0px;
 	margin:0;
 }
-
-.quiz-box .option-container{
-
+.quiz-box .header{
+	display: flex;
+	border-bottom: 1px solid #cccccc;
+}
+.quiz-box .timer{
+	
 }
 .quiz-box .option-container .option{
 	background-color: #cccccc;
@@ -96,13 +114,24 @@ body{
 	}
 }
 .quiz-box .answer-indicator div{
-	height: 40px;
-	width: 40px;
+	height: 35px;
+	width: 35px;
 	display: inline-block;
 	background-color: #cccccc;
 	border-radius: 50%;
-	margin-right: 3px;
+	margin-right:6px;
 	margin-top: 20px;
+	font-size: 18px;
+	text-align: center;
+	color: #ffffff;
+	text-indent:2px;
+	padding-top: 3px;
+	
+
+}
+.quiz-box .answer-indicator div.attempt{
+	background-color: #ff9933;
+	
 }
 
 .custom_page.hide{
@@ -113,6 +142,7 @@ body{
 }
 .quiz-box .answer-indicator{
 	border-top: 1px solid #cccccc;
+
 
 }
 .custom_page::before,
